--- a/public/index.html
+++ b/public/index.html
@@ -1,74 +1,201 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Portal Inmobiliario</title>
-<link rel="stylesheet" href="styles.css">
-<style>
-  body { background:#FFF9E5; font-family: Arial, sans-serif; padding:20px; }
-  .banner { background: linear-gradient(90deg,#A6CF3E,#7CC242); color:white; padding:15px 20px; text-align:center; border-radius:10px; display:flex; justify-content:space-between; align-items:center; }
-  .dropdown-btn { background:white; color:#7CC242; padding:10px 16px; border:none; border-radius:5px; cursor:pointer; }
-  .dropdown-btn:hover { background:#f0f0f0; }
-  #propiedades { display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:20px; margin-top:20px; }
-  .propiedad { background:white; padding:20px; border-radius:10px; box-shadow:0 4px 10px rgba(0,0,0,0.1); }
-  .propiedad img { width:100%; height:200px; object-fit:cover; border-radius:8px; margin-top:10px; }
-  .propiedad h2 { margin:10px 0 5px; font-size:1.2em; color:#7CC242; }
-  .propiedad p { margin:5px 0; }
-  .propiedad .precio { color:#A6CF3E; font-weight:bold; font-size:1.2em; }
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Costa Hogar - Tu portal inmobiliario</title>
+  <link rel="stylesheet" href="styles.css">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Arial', sans-serif;
+      background: #fff;
+      color: #333;
+    }
+
+    /* --- HERO / PORTADA --- */
+    .hero {
+      position: relative;
+      height: 100vh;
+      background: url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e?auto=format&fit=crop&w=1600&q=80')
+                  center/cover no-repeat;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      color: white;
+    }
+
+    .hero::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: rgba(0, 0, 0, 0.45);
+      z-index: 1;
+    }
+
+    .hero-content {
+      position: relative;
+      z-index: 2;
+      padding: 20px;
+    }
+
+    .hero h1 {
+      font-size: 4rem;
+      margin: 0;
+      text-shadow: 2px 2px 6px rgba(0,0,0,0.6);
+    }
+
+    .hero p {
+      font-size: 1.5rem;
+      margin: 10px 0 30px;
+      text-shadow: 1px 1px 4px rgba(0,0,0,0.6);
+    }
+
+    .hero-buttons {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 15px;
+    }
+
+    .hero-buttons a {
+      background: #A6CF3E;
+      color: white;
+      padding: 12px 25px;
+      border-radius: 6px;
+      font-weight: bold;
+      text-decoration: none;
+      transition: background 0.3s;
+    }
+
+    .hero-buttons a:hover {
+      background: #7CC242;
+    }
+
+    /* --- RESPONSIVO --- */
+    @media (max-width: 768px) {
+      .hero {
+        height: 75vh;
+      }
+      .hero h1 {
+        font-size: 2.5rem;
+      }
+      .hero p {
+        font-size: 1.2rem;
+      }
+    }
+
+    /* --- SECCIÓN DE ANUNCIOS --- */
+    .contenedor {
+      max-width: 1200px;
+      margin: 50px auto;
+      padding: 0 20px;
+    }
+
+    h2 {
+      text-align: center;
+      color: #7CC242;
+      margin-bottom: 30px;
+    }
+
+    .lista-propiedades {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 20px;
+    }
+
+    .tarjeta {
+      background: white;
+      border-radius: 10px;
+      overflow: hidden;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      transition: transform 0.2s;
+    }
+
+    .tarjeta:hover {
+      transform: scale(1.02);
+    }
+
+    .tarjeta img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+      cursor: pointer;
+    }
+
+    .tarjeta .contenido {
+      padding: 15px;
+    }
+
+    .tarjeta h3 {
+      margin: 0 0 10px;
+      color: #7CC242;
+    }
+
+    .tarjeta p {
+      margin: 0;
+      color: #555;
+    }
+
+  </style>
 </head>
 <body>
 
-<header class="banner">
-  <h1>Portal Inmobiliario 🏡</h1>
-  <button onclick="location.href='vender.html'" class="dropdown-btn">Pon tu anuncio</button>
-</header>
+  <!-- HERO / PORTADA -->
+  <section class="hero">
+    <div class="hero-content">
+      <h1>Costa Hogar</h1>
+      <p>Compra, vende o alquila con confianza</p>
+      <div class="hero-buttons">
+        <a href="#propiedades">🏠 Ver propiedades</a>
+        <a href="vender.html">✍️ Publicar anuncio</a>
+        <a href="contacto.html">💬 Contactar</a>
+      </div>
+    </div>
+  </section>
 
-<div id="propiedades"></div>
+  <!-- SECCIÓN DE ANUNCIOS -->
+  <div class="contenedor" id="propiedades">
+    <h2>Propiedades destacadas</h2>
+    <div class="lista-propiedades" id="lista-propiedades"></div>
+  </div>
 
-<script>
-  async function cargarPropiedades() {
-    try {
-      // ✅ Usa tu servidor de Render
-      const res = await fetch("https://miportal-inmobiliario-server.onrender.com/propiedades");
-      const propiedades = await res.json();
-      const contenedor = document.getElementById("propiedades");
-      contenedor.innerHTML = "";
+  <script>
+    // Cargar propiedades desde el backend (Render)
+    async function cargarPropiedades() {
+      try {
+        const res = await fetch("https://miportal-inmobiliario-server.onrender.com/propiedades");
+        const propiedades = await res.json();
 
-      if (propiedades.length === 0) {
-        contenedor.innerHTML = "<p>No hay propiedades todavía.</p>";
-        return;
+        const contenedor = document.getElementById("lista-propiedades");
+        contenedor.innerHTML = "";
+
+        propiedades.forEach(p => {
+          const div = document.createElement("div");
+          div.classList.add("tarjeta");
+          div.innerHTML = `
+            <img src="${p.imagen}" alt="${p.titulo}" onclick="verImagen('${p.imagen}')">
+            <div class="contenido">
+              <h3>${p.titulo}</h3>
+              <p>${p.direccion}</p>
+              <p><strong>${p.precio} €</strong></p>
+            </div>
+          `;
+          contenedor.appendChild(div);
+        });
+      } catch (err) {
+        console.error("Error al cargar propiedades:", err);
       }
-
-      propiedades.forEach(p => {
-        const div = document.createElement("div");
-        div.className = "propiedad";
-
-        // ✅ Mostrar imagen de Cloudinary (o placeholder si no hay)
-        let imgHTML = '';
-        if (p.imagen && p.imagen.startsWith("http")) {
-          imgHTML = `<img src="${p.imagen}" alt="${p.titulo}">`;
-        } else {
-          imgHTML = `<img src="https://via.placeholder.com/400x300?text=Sin+imagen" alt="Sin imagen">`;
-        }
-
-        div.innerHTML = `
-          <h2>${p.titulo}</h2>
-          <p>${p.descripcion || ""}</p>
-          <p class="precio">${p.precio} €</p>
-          <p><strong>Dirección:</strong> ${p.direccion}</p>
-          ${imgHTML}
-        `;
-        contenedor.appendChild(div);
-      });
-    } catch (err) {
-      console.error("Error cargando propiedades:", err);
     }
-  }
 
-  cargarPropiedades();
-</script>
+    function verImagen(url) {
+      const ventana = window.open("", "_blank");
+      ventana.document.write(`<img src='${url}' style='width:100%;height:auto;'>`);
+    }
+
+    cargarPropiedades();
+  </script>
 
 </body>
 </html>
